--- a/box_calibration/box_calibration/calibration/alphasense/cam3.yaml
+++ b/box_calibration/box_calibration/calibration/alphasense/cam3.yaml
@@ -1,20 +1,23 @@
-image_width: 1440
-image_height: 1080
-camera_name: alphasense_cam3
+# Created using 
 camera_matrix:
-  rows: 3
   cols: 3
-  data: [700.0004860751175, 0.0, 759.12748516355, 0.0, 700.2597084484345, 558.7152269628036, 0.0, 0.0, 1.0]
-distortion_model: equidistant
-distortion_coefficients:
-  rows: 1
-  cols: 4
-  data: [-0.052613472487081335, 0.02399058162383638, -0.022391975531253255, 0.006869040142449324]
-rectification_matrix:
+  data: [702.2304652317938, 0.0, 758.2752158071359, 0.0, 700.8418016215869, 541.4257848035661,
+    0.0, 0.0, 1.0]
   rows: 3
+camera_name: cam3_sensor_frame
+distortion_coefficients:
+  cols: 4
+  data: [-0.03742776055211713, -0.004921684280563942, 0.004815064416594661, -0.002217640353731962]
+  rows: 1
+distortion_model: equidistant
+image_height: 1080
+image_width: 1440
+projection_matrix:
+  cols: 4
+  data: [702.2304652317938, 0.0, 758.2752158071359, 0.0, 0.0, 700.8418016215869, 541.4257848035661,
+    0.0, 0.0, 0.0, 1.0, 0.0]
+  rows: 3
+rectification_matrix:
   cols: 3
   data: [1.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 1.0]
-projection_matrix:
   rows: 3
-  cols: 4
-  data: [700.0004860751175, 0.0, 759.12748516355, 0.0, 0.0, 700.2597084484345, 558.7152269628036, 0.0, 0.0, 1.0, 0.0]
