--- a/box_calibration/box_calibration/calibration/hdr/hdr_front.yaml
+++ b/box_calibration/box_calibration/calibration/hdr/hdr_front.yaml
@@ -1,20 +1,23 @@
-image_width: 1920
-image_height: 1080
-camera_name: hdr_front
+# Created using 
 camera_matrix:
-  rows: 3
   cols: 3
-  data: [699.3179471959317, 0.0, 960, 0.0, 697.5709250111197, 540, 0.0, 0.0, 1.0]
-distortion_model: equidistant
-distortion_coefficients:
-  rows: 1
-  cols: 4
-  data: [-0.0480472823273197, 0.012474686401591797, -0.01018792844315705, 0.002133696989290615]
-rectification_matrix:
+  data: [985.5074474241898, 0.0, 951.7960840489374, 0.0, 985.0423099311803, 638.127222917076,
+    0.0, 0.0, 1.0]
   rows: 3
+camera_name: hdr_front
+distortion_coefficients:
+  cols: 4
+  data: [-0.06129863822544315, 0.002526270977915111, -0.0004191605011825837, -0.0001852354097388015]
+  rows: 1
+distortion_model: equidistant
+image_height: 1280
+image_width: 1920
+projection_matrix:
+  cols: 4
+  data: [985.5074474241898, 0.0, 951.7960840489374, 0.0, 0.0, 985.0423099311803, 638.127222917076,
+    0.0, 0.0, 0.0, 1.0, 0.0]
+  rows: 3
+rectification_matrix:
   cols: 3
   data: [1.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 1.0]
-projection_matrix:
   rows: 3
-  cols: 4
-  data: [699.3179471959317, 0.0, 960, 0.0, 0.0, 697.5709250111197, 540, 0.0, 0.0, 1.0, 0.0]
