--- a/box_calibration/box_calibration/calibration/alphasense/cam4.yaml
+++ b/box_calibration/box_calibration/calibration/alphasense/cam4.yaml
@@ -1,20 +1,23 @@
-image_width: 1440
-image_height: 1080
-camera_name: alphasense_cam4
+# Created using 
 camera_matrix:
-  rows: 3
   cols: 3
-  data: [699.9293334296578, 0.0, 759.5393870073324, 0.0, 700.6017963877151, 553.8718579573937, 0.0, 0.0, 1.0]
-distortion_model: equidistant
-distortion_coefficients:
-  rows: 1
-  cols: 4
-  data: [-0.042496364951554504, 0.004941278726949148, -0.005138862684626858, 0.0010801675193205893]
-rectification_matrix:
+  data: [699.9009769846375, 0.0, 707.4339968730018, 0.0, 699.97830848032, 524.6573172726385,
+    0.0, 0.0, 1.0]
   rows: 3
+camera_name: cam4_sensor_frame
+distortion_coefficients:
+  cols: 4
+  data: [-0.03570412886568466, -0.01146195954145682, 0.01052423965798831, -0.003758048076511013]
+  rows: 1
+distortion_model: equidistant
+image_height: 1080
+image_width: 1440
+projection_matrix:
+  cols: 4
+  data: [699.9009769846375, 0.0, 707.4339968730018, 0.0, 0.0, 699.97830848032, 524.6573172726385,
+    0.0, 0.0, 0.0, 1.0, 0.0]
+  rows: 3
+rectification_matrix:
   cols: 3
   data: [1.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 1.0]
-projection_matrix:
   rows: 3
-  cols: 4
-  data: [699.9293334296578, 0.0, 759.5393870073324, 0.0, 0.0, 700.6017963877151, 553.8718579573937, 0.0, 0.0, 1.0, 0.0]
