--- a/box_utils/box_auto/docker/compose.yaml
+++ b/box_utils/box_auto/docker/compose.yaml
@@ -6,7 +6,7 @@ x-common-config: &common-config
       default: "$HOME/.ssh/id_rsa_2"
   image: leggedrobotics/box
   runtime: nvidia
-  network_mode: host
+  # network_mode: host
   privileged: true
   environment:
     QT_X11_NO_MITSHM: "1"
@@ -18,7 +18,11 @@ x-common-config: &common-config
         devices:
           - driver: nvidia
             count: all
-            capabilities: [gpu]
+            capabilities:
+              - gpu
+              - utility # nvidia-smi
+              - compute # CUDA
+              - video   
   volumes:
     - /mission_data:/mission_data
     - /home/jonfrey/git/grand_tour_box:/home/catkin_ws/src/grand_tour_box
@@ -29,20 +33,24 @@ services:
   #   container_name: mcap_to_rosbag
   #   entrypoint: ["python3", "/home/catkin_ws/src/grand_tour_box/box_utils/box_auto/scripts/mcap_to_rosbag.py"]
 
-  zed2i:
-    <<: *common-config
-    container_name: zed2i
-    entrypoint: ["python3", "/home/catkin_ws/src/grand_tour_box/box_utils/box_auto/scripts/zed2i.py"]
+  # zed2i:
+  #   <<: *common-config
+  #   container_name: zed2i
+  #   entrypoint: ["python3", "/home/catkin_ws/src/grand_tour_box/box_utils/box_auto/scripts/zed2i.py"]
 
   # repair_bags:
   #   <<: *common-config
   #   container_name: repair_bags
   #   entrypoint: ["python3", "/home/catkin_ws/src/grand_tour_box/box_utils/box_auto/scripts/repair_bags.py"]
 
+  # STOP 0
+
   # merge_mission:
   #   <<: *common-config
   #   container_name: merge_mission
   #   entrypoint: ["python3", "/home/catkin_ws/src/grand_tour_box/box_utils/box_auto/scripts/merge_mission.py"]
+  
+  # STOP 1
 
   # color_correction:
   #   <<: *common-config
@@ -54,10 +62,11 @@ services:
   #   container_name: cpt7
   #   entrypoint: ["python3", "/home/catkin_ws/src/grand_tour_box/box_utils/box_auto/scripts/cpt7.py"]
 
-  # hesai:
-  #   <<: *common-config
-  #   container_name: hesai
-  #   entrypoint: ["python3", "/home/catkin_ws/src/grand_tour_box/box_utils/box_auto/scripts/hesai.py"]
+  hesai:
+    <<: *common-config
+    container_name: hesai
+    entrypoint: ["/entrypoint.sh"]
+    command: ["python3", "/home/catkin_ws/src/grand_tour_box/box_utils/box_auto/scripts/hesai.py"]
 
   # topic_freq:
   #   <<: *common-config
