--- a/box_utils/box_auto/docker/compose.yaml
+++ b/box_utils/box_auto/docker/compose.yaml
@@ -25,7 +25,7 @@ x-common-config: &common-config
               - video   # encoding 
   volumes:
     - /mission_data:/mission_data
-    # - /home/jonfrey/git/grand_tour_box:/home/catkin_ws/src/grand_tour_box
+    # - /home/jonfrey/git/grand_tour_box:/home/catkin_ws/src/grand_tour_box # For debugging
 
 services:
   mcap_to_rosbag:
@@ -57,13 +57,11 @@ services:
       repair_bags:
         condition: service_completed_successfully
 
-        
-  #STOP 1
-
-  color_correction:
+  # STOP 1
+  update_camera_info:
     <<: *common-config
-    container_name: color_correction
-    command: ["python3", "/home/catkin_ws/src/grand_tour_box/box_utils/box_auto/scripts/color_correction.py"]
+    container_name: update_camera_info
+    command: ["python3", "/home/catkin_ws/src/grand_tour_box/box_utils/box_auto/scripts/update_camera_info.py"]
     depends_on:
       merge_mission:
         condition: service_completed_successfully
@@ -91,11 +89,20 @@ services:
     depends_on:
       merge_mission:
         condition: service_completed_successfully
-        
+  
+  # STOP 2
+  color_correction:
+    <<: *common-config
+    container_name: color_correction
+    command: ["python3", "/home/catkin_ws/src/grand_tour_box/box_utils/box_auto/scripts/color_correction.py"]
+    depends_on:
+      update_camera_info:
+        condition: service_completed_successfully
+
   rectify:
     <<: *common-config
     container_name: rectify
     command: ["python3", "/home/catkin_ws/src/grand_tour_box/box_utils/box_auto/scripts/rectify.py"]
     depends_on:
-      merge_mission:
+      update_camera_info:
         condition: service_completed_successfully
