--- a/box_calibration/box_calibration/calibration/tf/calibration_latest.yaml
+++ b/box_calibration/box_calibration/calibration/tf/calibration_latest.yaml
@@ -102,6 +102,30 @@ box_base_to_zed_base:
   pitch: 0.175
   yaw: 0.000
 
+zed_camera_center_to_zed_left:
+  x: -0.01
+  y: 0.06
+  z: 0.0
+  roll: 0.0
+  pitch: 0.0
+  yaw: 0.0
+
+zed_camera_center_to_zed_right:
+  x: -0.01
+  y: -0.06
+  z: 0.0
+  roll: 0.0
+  pitch: 0.0
+  yaw: 0.0
+
+zed_left_camera_frame_to_zed_imu_link:
+  x: -0.002000
+  y: -0.023061
+  z: 0.000217
+  roll: -0.0036674
+  pitch: 0.0004468
+  yaw: -0.0130214
+
 box_base_to_imu_stim320:
   x: 0.0
   y: 0.0
