Refactor CPT7 and Basilisk definitions into calibration_latest.yaml file

--- a/box_calibration/box_calibration/calibration/tf/calibration_latest.yaml
+++ b/box_calibration/box_calibration/calibration/tf/calibration_latest.yaml
@@ -141,3 +141,19 @@ box_base_to_livox:
   roll: 3.142
   pitch: 0.000
   yaw: 0.000
+
+box_base_to_cpt7_imu_frame:
+  x: -0.294
+  y: -0.058
+  z: 0.164
+  roll: 3.14159265
+  pitch: 0.000
+  yaw: 0.000
+
+box_base_to_basilisk_imu_frame:
+  x: -0.293
+  y: 0.034
+  z: 0.155
+  roll: 1.571
+  pitch: 0.000
+  yaw: 0.000
