Update default calibration to be based in CPT7

--- a/box_calibration/box_calibration/calibration/tf/calibration_cad.yaml
+++ b/box_calibration/box_calibration/calibration/tf/calibration_cad.yaml
@@ -1,18 +1,18 @@
-prism_to_box_base:
-  x: -0.013
-  y: 0.022
-  z: -0.340
-  roll: 0.0
+box_base_to_prism:
+  x: 0.303281493778
+  y: -0.036500000014
+  z: -0.17645647715600002
+  roll: 3.141592653589793
   pitch: 0.0
   yaw: 0.0
 
 box_base_to_alphasense_base:
-  x: 0.072
-  y: 0.033
-  z: 0.089
-  roll: -1.745
-  pitch: 0.000
-  yaw: -1.571
+  x: 0.362281493778
+  y: -0.091500000014
+  z: 0.07454352284400001
+  roll: 1.3965926535897932
+  pitch: 2.220446049250313e-16
+  yaw: 1.571
 
 alphasense_base_to_alphasense_front_right:
   x: 0.110
@@ -47,12 +47,12 @@ alphasense_base_to_alphasense_right:
   yaw: -1.571
 
 box_base_to_hdr_base:
-  x: 0.059
-  y: -0.022
-  z: 0.054
-  roll: -1.571
-  pitch: 0.000
-  yaw: -1.571
+  x: 0.349281493778
+  y: -0.036500000014
+  z: 0.10954352284400001
+  roll: 1.5705926535897934
+  pitch: 0.0
+  yaw: 1.571
 
 hdr_base_to_hdr_left:
   x: -0.087
@@ -87,41 +87,47 @@ zed_left_camera_frame_to_zed_imu_link:
   yaw: -0.0130214
 
 box_base_to_imu_stim320:
-  x: 0.0
-  y: 0.0
-  z: 0.0
-  roll: 0.0
+  x: 0.290281493778
+  y: -0.058500000014
+  z: 0.163543522844
+  roll: 3.141592653589793
   pitch: 0.0
   yaw: 0.0
-
 box_base_to_imu_adis16475:
-  x: 0.032
-  y: -0.056
-  z: 0.002
-  roll: 0.000
-  pitch: 0.000
-  yaw: 1.571
+  x: 0.32228149377799997
+  y: -0.002500000013999998
+  z: 0.161543522844
+  roll: 3.141592653589793
+  pitch: 0.0
+  yaw: -1.571
 
 box_base_to_imu_alphasense:
-  x: 0.0
-  y: 0.0
-  z: 0.0
-  roll: 3.14159265
+  x: 0.290281493778
+  y: -0.058500000014
+  z: 0.163543522844
+  roll: -3.5897930298416118e-09
   pitch: 0.0
   yaw: 0.0
 
 box_base_to_hesai:
-  x: 0.013
-  y: -0.022
-  z: 0.169
-  roll: 0.000
-  pitch: 0.000
-  yaw: 1.571
-
+  x: 0.303281493778
+  y: -0.036500000014
+  z: -0.005456477156000006
+  roll: 3.141592653589793
+  pitch: 0.0
+  yaw: -1.571
 box_base_to_livox:
-  x: 0.013
-  y: -0.022
-  z: 0.264
-  roll: 3.142
-  pitch: 0.000
-  yaw: 0.000
+  x: 0.303281493778
+  y: -0.036500000014
+  z: -0.100456477156
+  roll: 0.00040734641020666556
+  pitch: 0.0
+  yaw: 0.0
+box_base_to_basilisk_imu_frame:
+  x: -0.0027185062219999834
+  y: -0.092500000014
+  z: 0.008543522844000007
+  roll: -1.5705926535897934
+  pitch: 0.0
+  yaw: 0.0
+
