Update new calibration_latest.yaml with coordinates in cpt7 frame

--- a/box_calibration/box_calibration/calibration/tf/calibration_latest.yaml
+++ b/box_calibration/box_calibration/calibration/tf/calibration_latest.yaml
@@ -1,143 +1,119 @@
-prism_to_box_base:
-  x: -0.013
-  y: 0.022
-  z: -0.340
-  roll: 0.0
+box_base_to_prism:
+  x: 0.303281493778
+  y: -0.036500000014
+  z: -0.17645647715600002
+  roll: 3.141592653589793
   pitch: 0.0
   yaw: 0.0
-
 box_base_to_alphasense_base:
-  x: 0.072
-  y: 0.033
-  z: 0.089
-  roll: -1.745
-  pitch: 0.000
-  yaw: -1.571
-
+  x: 0.3452182722474499
+  y: -0.09127133225537945
+  z: 0.07214748096859896
+  roll: -1.39539352052961
+  pitch: 0.005878667714337649
+  yaw: -1.5734445894740188
 alphasense_base_to_alphasense_front_right:
-  x: 0.110
-  y: -0.000
-  z: -0.000
-  roll: 0.000
-  pitch: 0.000
-  yaw: 0.000
-
+  x: -0.11049643837408873
+  y: 0.0002951449434914941
+  z: -0.0006131480716200081
+  roll: -0.0005709389162411695
+  pitch: -0.0020736413455058056
+  yaw: -0.020414505228272116
 alphasense_base_to_alphasense_front_middle:
-  x: 0.055
-  y: -0.000
-  z: -0.000
-  roll: 0.000
-  pitch: 0.000
-  yaw: 0.000
-
+  x: -0.05530273500370328
+  y: 0.0006325050108971435
+  z: -6.415060716975344e-05
+  roll: 0.0007444829511250906
+  pitch: -0.0006960881951050268
+  yaw: -0.01708671747377292
 alphasense_base_to_alphasense_left:
-  x: -0.045
-  y: 0.011
-  z: -0.065
-  roll: 1.396
-  pitch: -1.396
-  yaw: -1.571
-
+  x: 0.0473043037365011
+  y: -0.012927546781098507
+  z: -0.06795701881364791
+  roll: 1.4287233911742216
+  pitch: -1.4011721916537554
+  yaw: 1.5311525573512614
 alphasense_base_to_alphasense_right:
-  x: 0.155
-  y: 0.011
-  z: -0.065
-  roll: -1.396
-  pitch: -1.396
-  yaw: -1.571
-
+  x: -0.1584281516739228
+  y: -0.011362147427026133
+  z: -0.06788359342978728
+  roll: -1.4132991276870994
+  pitch: -1.410735040862395
+  yaw: 1.586605905580491
 box_base_to_hdr_base:
-  x: 0.059
-  y: -0.022
-  z: 0.054
-  roll: -1.571
-  pitch: 0.000
-  yaw: -1.571
-
+  x: 0.34594666886027137
+  y: -0.035152391202666736
+  z: 0.10652373862847034
+  roll: 1.5683893716937003
+  pitch: 0.0076321779867012385
+  yaw: 1.571833261709149
 hdr_base_to_hdr_left:
-  x: -0.087
-  y: 0.000
-  z: -0.055
-  roll: 3.142
-  pitch: -1.396
-  yaw: 3.142
-
+  x: -0.10395243226178376
+  y: -0.00040572886653553186
+  z: -0.07601586002775959
+  roll: 3.1334060060844315
+  pitch: -1.3907535523363899
+  yaw: -3.1187368575088548
 hdr_base_to_hdr_right:
-  x: 0.087
-  y: 0.000
-  z: -0.055
-  roll: 3.142
-  pitch: 1.396
-  yaw: 3.142
-
+  x: 0.10365138712645819
+  y: 0.000458635523023089
+  z: -0.07524101214908505
+  roll: -3.1190427799739338
+  pitch: 1.4010622801248123
+  yaw: -3.1156037564943673
 zed_left_optical_to_zed_right_optical:
-  x: 0.12
-  y: 0.0
-  z: 0.0
-  roll: 0.0
-  pitch: 0.0
-  yaw: 0.0
-
+  x: 0.11990037039721589
+  y: -0.00038930934427724995
+  z: 0.0006435643039102157
+  roll: 0.0015141712684178029
+  pitch: -0.0016352315604488687
+  yaw: -0.002429802185043824
 zed_left_camera_frame_to_zed_imu_link:
-  x: -0.002000
+  x: -0.002
   y: -0.023061
   z: 0.000217
-  roll: -0.0036674
-  pitch: 0.0004468
-  yaw: -0.0130214
-
+  roll: -0.003667399999999999
+  pitch: 0.00044679999999996944
+  yaw: -0.013021399999999999
 box_base_to_imu_stim320:
-  x: 0.0
-  y: 0.0
-  z: 0.0
-  roll: 0.0
+  x: 0.290281493778
+  y: -0.058500000014
+  z: 0.163543522844
+  roll: 3.141592653589793
   pitch: 0.0
   yaw: 0.0
-
 box_base_to_imu_adis16475:
-  x: 0.032
-  y: -0.056
-  z: 0.002
-  roll: 0.000
-  pitch: 0.000
-  yaw: 1.571
-
+  x: 0.32228149377799997
+  y: -0.002500000013999998
+  z: 0.161543522844
+  roll: 3.141592653589793
+  pitch: 0.0
+  yaw: -1.571
 box_base_to_imu_alphasense:
-  x: 0.0
-  y: 0.0
-  z: 0.0
-  roll: 3.14159265
+  x: 0.290281493778
+  y: -0.058500000014
+  z: 0.163543522844
+  roll: -3.5897930298416118e-09
   pitch: 0.0
   yaw: 0.0
-
 box_base_to_hesai:
-  x: 0.013
-  y: -0.022
-  z: 0.169
-  roll: 0.000
-  pitch: 0.000
-  yaw: 1.571
-
+  x: 0.303281493778
+  y: -0.036500000014
+  z: -0.005456477156000006
+  roll: 3.141592653589793
+  pitch: 0.0
+  yaw: -1.571
 box_base_to_livox:
-  x: 0.013
-  y: -0.022
-  z: 0.264
-  roll: 3.142
-  pitch: 0.000
-  yaw: 0.000
-
-box_base_to_cpt7_imu_frame:
-  x: -0.294
-  y: -0.058
-  z: 0.164
-  roll: 3.14159265
-  pitch: 0.000
-  yaw: 0.000
-
+  x: 0.303281493778
+  y: -0.036500000014
+  z: -0.100456477156
+  roll: 0.00040734641020666556
+  pitch: 0.0
+  yaw: 0.0
 box_base_to_basilisk_imu_frame:
-  x: -0.293
-  y: 0.034
-  z: 0.155
-  roll: 1.571
-  pitch: 0.000
-  yaw: 0.000
+  x: -0.0027185062219999834
+  y: -0.092500000014
+  z: 0.008543522844000007
+  roll: -1.5705926535897934
+  pitch: 0.0
+  yaw: 0.0
