--- a/box_configuration/pi/pigpiod_box.service
+++ b/box_configuration/pi/pigpiod_box.service
@@ -3,8 +3,7 @@ Description=Daemon required to control GPIO pins via pigpio
 After=network-online.target
 
 [Service]
-ExecStart=sudo /home/rsl/git/pigpio-master/pigpiod -l
-ExecStop=/bin/systemctl kill pigpiod
+ExecStart=sudo pigpiod -l
 Type=forking
 [Install]
 WantedBy=multi-user.target
