--- a/box_launch/tmux/jetson_recording.yaml
+++ b/box_launch/tmux/jetson_recording.yaml
@@ -34,6 +34,6 @@ windows:
       - source ~/catkin_ws/src/grand_tour_box/box_configuration/jetson/alias.sh  
       - df -h /data
       focus: true
-    - shell_command:
-      - sleep 1
-      - l-docker hdr_start
+#     - shell_command:
+#       - sleep 1
+#       - l-docker hdr_start
