added new network settings nuc

--- a/box_configuration/nuc/01-network-manager-all.yaml
+++ b/box_configuration/nuc/01-network-manager-all.yaml
@@ -14,3 +14,6 @@ network:
       addresses:
         - 192.168.20.1/24
       dhcp4: no
+      set-name: enp46s0
+      match:
+        macaddress: a8:a1:59:d1:58:a9
