changed recording files for adis

--- a/box_utils/box_recording/cfg/box_default.yaml
+++ b/box_utils/box_recording/cfg/box_default.yaml
@@ -1,18 +1,8 @@
 
 jetson:
   bags:
-    utils:
-      - /gt_box/alphasense_driver_node/imu
-      - /gt_box/health_status/jetson/status
     zed2i:
       - svo # SVO recording, not rosbag. Mutually exclusive: won't record zed ros topics if svo is set here.
-    ap20:
-      - /gt_box/ap20/imu
-      - /gt_box/ap20/prism_position
-    ap20_aux:
-      - /ap20/tps
-      - /ap20/imu
-      - /gt_box/ap20/debug
     hdr:
       - /gt_box/hdr_front/image_raw/compressed
       - /gt_box/hdr_front/camera_info
@@ -20,8 +10,20 @@ jetson:
       - /gt_box/hdr_left/camera_info
       - /gt_box/hdr_right/image_raw/compressed
       - /gt_box/hdr_right/camera_info
+    utils:
+      - /gt_box/alphasense_driver_node/imu
+      - /gt_box/health_status/jetson/status
+    ap20:
+      - /gt_box/ap20/imu
+      - /gt_box/ap20/prism_position
+    ap20_aux:
+      - /ap20/tps
+      - /ap20/imu
+      - /gt_box/ap20/debug
     clock_jetson:
       - /clock
+    adis:
+      - /gt_box/adis16475_node/imu
 nuc:
   bags:
     cpt7_local:
