modifed system srv

--- a/box_configuration/jetson/autostart_tmux.service
+++ b/box_configuration/jetson/autostart_tmux.service
@@ -1,14 +1,12 @@
 [Unit]
 Description=Autostart Terminal and Run tmuxp
-After=network-online.target
-After=phc2sys_mgbe0.service
-After=phc2sys_mgbe1.service
+After=ptp4l_mgbe0.service
 
 [Service]
 Type=forking
-ExecStartPre=/bin/sleep 30
+ExecStartPre=/bin/sleep 15
 ExecStart=/usr/bin/tmuxp load /home/rsl/git/grand_tour_box/box_launch/tmux/jetson_recording.yaml -d
 User=rsl
 
 [Install]
-WantedBy=multi-user.target
+WantedBy=default.target
