--- a/box_configuration/pi/autostart_tmux.service
+++ b/box_configuration/pi/autostart_tmux.service
@@ -1,13 +1,11 @@
 [Unit]
 Description=Autostart Terminal and Run tmuxp
-After=network-online.target
-After=phc2sys_eth0.service
-After=autostart_set_fan_speed.service
+After=ptp4l_eth0.service
 
 [Service]
 Type=forking
 ExecStartPre=/bin/sleep 10
-ExecStart=sudo /usr/bin/tmuxp load /home/rsl/git/grand_tour_box/box_launch/tmux/pi_recording.yaml -d
+ExecStart=/usr/bin/tmuxp load /home/rsl/git/grand_tour_box/box_launch/tmux/pi_recording.yaml -d
 User=rsl
 
 [Install]
