--- a/box_launch/tmux/pi_recording.yaml
+++ b/box_launch/tmux/pi_recording.yaml
@@ -11,6 +11,7 @@ windows:
     pane-border-status: top
   panes:
     - shell_command:
+      - cd /home/rsl/git/grand_tour_box/box_configuration/pi/docker
       - /home/rsl/git/grand_tour_box/box_configuration/pi/docker/run.sh --command=/home/rsl/git/grand_tour_box/box_configuration/pi/docker/launch_fkie.sh
     - shell_command:
       - source ~/catkin_ws/src/grand_tour_box/box_configuration/pi/alias.sh 
@@ -18,4 +19,5 @@ windows:
       - df -h $HOME
       - history -s tk
       - history -s l-docker
+      - cd ~
       focus: true
