--- a/box_utils/box_auto/docker/compose.yaml
+++ b/box_utils/box_auto/docker/compose.yaml
@@ -25,7 +25,7 @@ x-common-config: &common-config
               - video   # encoding 
   volumes:
     - /mission_data:/mission_data
-    # - /home/jonfrey/git/grand_tour_box:/home/catkin_ws/src/grand_tour_box # For debugging
+    - /home/jonfrey/git/grand_tour_box:/home/catkin_ws/src/grand_tour_box # For debugging
 
 services:
   mcap_to_rosbag:
@@ -33,76 +33,76 @@ services:
     container_name: mcap_to_rosbag
     command: ["python3", "/home/catkin_ws/src/grand_tour_box/box_utils/box_auto/scripts/mcap_to_rosbag.py"]
 
-  zed2i:
-    <<: *common-config
-    container_name: zed2i
-    command: ["python3", "/home/catkin_ws/src/grand_tour_box/box_utils/box_auto/scripts/zed2i.py"]
+  # zed2i:
+  #   <<: *common-config
+  #   container_name: zed2i
+  #   command: ["python3", "/home/catkin_ws/src/grand_tour_box/box_utils/box_auto/scripts/zed2i.py"]
 
-  repair_bags:
-    <<: *common-config
-    container_name: repair_bags
-    command: ["python3", "/home/catkin_ws/src/grand_tour_box/box_utils/box_auto/scripts/repair_bags.py"]
+  # repair_bags:
+  #   <<: *common-config
+  #   container_name: repair_bags
+  #   command: ["python3", "/home/catkin_ws/src/grand_tour_box/box_utils/box_auto/scripts/repair_bags.py"]
 
-  #STOP 0
+  # #STOP 0
 
-  merge_mission:
-    <<: *common-config
-    container_name: merge_mission
-    command: ["python3", "/home/catkin_ws/src/grand_tour_box/box_utils/box_auto/scripts/merge_mission.py"]
-    depends_on:
-      mcap_to_rosbag:
-        condition: service_completed_successfully
-      zed2i:
-        condition: service_completed_successfully
-      repair_bags:
-        condition: service_completed_successfully
+  # merge_mission:
+  #   <<: *common-config
+  #   container_name: merge_mission
+  #   command: ["python3", "/home/catkin_ws/src/grand_tour_box/box_utils/box_auto/scripts/merge_mission.py"]
+  #   depends_on:
+  #     mcap_to_rosbag:
+  #       condition: service_completed_successfully
+  #     zed2i:
+  #       condition: service_completed_successfully
+  #     repair_bags:
+  #       condition: service_completed_successfully
 
-  # STOP 1
-  update_camera_info:
-    <<: *common-config
-    container_name: update_camera_info
-    command: ["python3", "/home/catkin_ws/src/grand_tour_box/box_utils/box_auto/scripts/update_camera_info.py"]
-    depends_on:
-      merge_mission:
-        condition: service_completed_successfully
+  # # STOP 1
+  # update_camera_info:
+  #   <<: *common-config
+  #   container_name: update_camera_info
+  #   command: ["python3", "/home/catkin_ws/src/grand_tour_box/box_utils/box_auto/scripts/update_camera_info.py"]
+  #   depends_on:
+  #     merge_mission:
+  #       condition: service_completed_successfully
 
-  cpt7:
-    <<: *common-config
-    container_name: cpt7
-    command: ["python3", "/home/catkin_ws/src/grand_tour_box/box_utils/box_auto/scripts/cpt7.py"]
-    depends_on:
-      merge_mission:
-        condition: service_completed_successfully
+  # cpt7:
+  #   <<: *common-config
+  #   container_name: cpt7
+  #   command: ["python3", "/home/catkin_ws/src/grand_tour_box/box_utils/box_auto/scripts/cpt7.py"]
+  #   depends_on:
+  #     merge_mission:
+  #       condition: service_completed_successfully
 
-  hesai:
-    <<: *common-config
-    container_name: hesai
-    command: ["python3", "/home/catkin_ws/src/grand_tour_box/box_utils/box_auto/scripts/hesai.py"]
-    depends_on:
-      merge_mission:
-        condition: service_completed_successfully
+  # hesai:
+  #   <<: *common-config
+  #   container_name: hesai
+  #   command: ["python3", "/home/catkin_ws/src/grand_tour_box/box_utils/box_auto/scripts/hesai.py"]
+  #   depends_on:
+  #     merge_mission:
+  #       condition: service_completed_successfully
 
-  topic_freq:
-    <<: *common-config
-    container_name: topic_freq
-    command: ["python3", "/home/catkin_ws/src/grand_tour_box/box_utils/box_auto/scripts/topic_freq.py"]
-    depends_on:
-      merge_mission:
-        condition: service_completed_successfully
+  # topic_freq:
+  #   <<: *common-config
+  #   container_name: topic_freq
+  #   command: ["python3", "/home/catkin_ws/src/grand_tour_box/box_utils/box_auto/scripts/topic_freq.py"]
+  #   depends_on:
+  #     merge_mission:
+  #       condition: service_completed_successfully
   
-  # STOP 2
-  color_correction:
-    <<: *common-config
-    container_name: color_correction
-    command: ["python3", "/home/catkin_ws/src/grand_tour_box/box_utils/box_auto/scripts/color_correction.py"]
-    depends_on:
-      update_camera_info:
-        condition: service_completed_successfully
+  # # STOP 2
+  # color_correction:
+  #   <<: *common-config
+  #   container_name: color_correction
+  #   command: ["python3", "/home/catkin_ws/src/grand_tour_box/box_utils/box_auto/scripts/color_correction.py"]
+  #   depends_on:
+  #     update_camera_info:
+  #       condition: service_completed_successfully
 
-  rectify:
-    <<: *common-config
-    container_name: rectify
-    command: ["python3", "/home/catkin_ws/src/grand_tour_box/box_utils/box_auto/scripts/rectify.py"]
-    depends_on:
-      update_camera_info:
-        condition: service_completed_successfully
+  # rectify:
+  #   <<: *common-config
+  #   container_name: rectify
+  #   command: ["python3", "/home/catkin_ws/src/grand_tour_box/box_utils/box_auto/scripts/rectify.py"]
+  #   depends_on:
+  #     update_camera_info:
+  #       condition: service_completed_successfully
