updated replay settings

--- a/box_model/box_model/package.xml
+++ b/box_model/box_model/package.xml
@@ -12,6 +12,7 @@
 
   <buildtool_depend>catkin</buildtool_depend>
   <depend>xacro</depend>
+  <depend>box_calibration</depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
