--- a/box_launch/launch_opc/package.xml
+++ b/box_launch/launch_opc/package.xml
@@ -17,4 +17,6 @@
   <depend>box_throttling</depend>
   <depend>box_relaying</depend>
   <depend>box_launch</depend>
+  <depend>launch_replay</depend>
+  
 </package>
