--- a/box_launch/tmux/opc_replay.yaml
+++ b/box_launch/tmux/opc_replay.yaml
@@ -8,8 +8,8 @@ windows:
   shell_command_before:
     - export HOSTNAME
     - export DISPLAY=:0.0
-    - export ROS_MASTER_URI=http://192.168.2.154:11311
-    - export ROS_IP=192.168.2.154
+    - export ROS_MASTER_URI=http://192.168.1.1:11311
+    - export ROS_IP=192.168.1.1
 
   options:
     pane-border-status: top
@@ -17,14 +17,12 @@ windows:
     - shell_command:
       - source /opt/ros/noetic/setup.bash
       - source ~/catkin_ws/devel/setup.bash
-      - roslaunch bringup_fkie fkie.launch
-          autostart_launch_files:="
-            $(rospack find box_rviz)/launch/box_rviz.launch
-            "
-          use_gui:=true
+      - roslaunch launch_replay replay_postprocessed.launch
 
     - shell_command:
       - source /opt/ros/noetic/setup.bash
       - source ~/catkin_ws/devel/setup.bash
       - source ~/catkin_ws/src/grand_tour_box/box_configuration/opc/alias.sh 
+      - cd /mission_data/
+      - history -s "rosbag play --clock --pause ./*.bag"
       focus: true
