--- a/box_launch/launch_opc/package.xml
+++ b/box_launch/launch_opc/package.xml
@@ -18,5 +18,6 @@
   <depend>box_relaying</depend>
   <depend>box_launch</depend>
   <depend>launch_replay</depend>
+ <depend>bringup_ap20</depend> 
   
 </package>
