--- a/box_utils/box_recording/cfg/calib_front_cameras_imu.yaml
+++ b/box_utils/box_recording/cfg/calib_front_cameras_imu.yaml
@@ -28,7 +28,7 @@ nuc:
       - /gt_box/alphasense_driver_node/imu
     livox:
       - /gt_box/livox/imu
-      - /gt_box/livox/imu_SI
+      - /gt_box/livox/imu_si_compliant
     alphasense:
       - /gt_box/alphasense_driver_node/cam1
       - /gt_box/alphasense_driver_node/cam2
