--- a/box_utils/box_recording/cfg/imu_ptp.yaml
+++ b/box_utils/box_recording/cfg/imu_ptp.yaml
@@ -26,7 +26,7 @@ nuc:
       - /gt_box/health_status/nuc/status
     livox:
       - /gt_box/livox/imu
-      - /gt_box/livox/imu_SI
+      - /gt_box/livox/imu_si_compliant
     alphasense:
       - /gt_box/alphasense_driver_node/debug_info
       - /gt_box/alphasense_driver_node/imu
