--- a/box_utils/box_recording/cfg/robot.yaml
+++ b/box_utils/box_recording/cfg/robot.yaml
@@ -36,7 +36,7 @@ nuc:
     livox:
       - /gt_box/livox/lidar
       - /gt_box/livox/imu
-      - /gt_box/livox/imu_SI
+      - /gt_box/livox/imu_si_compliant
     alphasense:
       - /gt_box/alphasense_driver_node/cam1/color/image/compressed
       - /gt_box/alphasense_driver_node/cam1/color/camera_info
