--- a/box_launch/launch_opc/package.xml
+++ b/box_launch/launch_opc/package.xml
@@ -19,5 +19,7 @@
   <depend>box_launch</depend>
   <depend>launch_replay</depend>
  <depend>bringup_ap20</depend> 
+  <depend>novatel_oem7_msgs</depend>
+ 
   
 </package>
