--- a/box_configuration/pi/ptp4l_eth0.service
+++ b/box_configuration/pi/ptp4l_eth0.service
@@ -5,7 +5,12 @@ After=network-online.target
 
 [Service]
 Type=simple
-ExecStart=/usr/sbin/ptp4l -i eth0 -H -s -f /home/rsl/git/grand_tour_box/box_configuration/jetson/ptp4l.conf
+ExecStart=/usr/sbin/ptp4l -i eth0 -H -s -m -f /home/rsl/git/grand_tour_box/box_configuration/jetson/ptp4l.conf
 Restart=on-failure
+
+# Redirect standard output and error to a log file
+StandardOutput=append:/tmp/ptp4l_eth0.log
+StandardError=append:/tmp/ptp4l_eth0.log
+
 [Install]
 WantedBy=multi-user.target
