--- a/box_utils/box_recording/cfg/imu_ptp.yaml
+++ b/box_utils/box_recording/cfg/imu_ptp.yaml
@@ -18,6 +18,11 @@ jetson:
       - /clock
     adis:
       - /gt_box/adis16475_node/imu
+    stim:
+      - /gt_box/stim320/acceletometer_temperature
+      - /gt_box/stim320/gyroscope_temperature
+      - /gt_box/stim320/imu
+      - /gt_box/stim320/internal_counter
 nuc:
   bags:
     cpt7_local:
