--- a/box_utils/box_recording/cfg/box_default.yaml
+++ b/box_utils/box_recording/cfg/box_default.yaml
@@ -21,6 +21,11 @@ jetson:
       - /gt_box/ap20/debug
     adis:
       - /gt_box/adis16475_node/imu
+    stim:
+      - /gt_box/stim320/acceletometer_temperature
+      - /gt_box/stim320/gyroscope_temperature
+      - /gt_box/stim320/imu
+      - /gt_box/stim320/internal_counter
 nuc:
   bags:
     utils:
