--- a/box_launch/launch_pi/package.xml
+++ b/box_launch/launch_pi/package.xml
@@ -12,7 +12,9 @@
   <exec_depend>bringup_fkie</exec_depend>
   <depend>box_health</depend>
   <depend>bringup_adis16475</depend>
+  <depend>bringup_stim320</depend>
   <depend>box_fan_control</depend>
   <depend>box_launch</depend>
+
 
 </package>
