--- a/box_utils/box_recording/cfg/calib_front_cameras_imu.yaml
+++ b/box_utils/box_recording/cfg/calib_front_cameras_imu.yaml
@@ -26,10 +26,11 @@ jetson:
       - /gt_box/stim320/gyroscope_temperature
       - /gt_box/stim320/imu
       - /gt_box/stim320/internal_counter
+      - /gt_box/stim320/kernel_timer
+      - /gt_box/stim320/continuous_counter
 nuc:
   bags:
     imus:
-      - /gt_box/stim320/imu
       - /gt_box/alphasense_driver_node/imu
     livox:
       - /gt_box/livox/imu
