--- a/box_utils/box_recording/cfg/imu_ptp.yaml
+++ b/box_utils/box_recording/cfg/imu_ptp.yaml
@@ -23,6 +23,8 @@ jetson:
       - /gt_box/stim320/gyroscope_temperature
       - /gt_box/stim320/imu
       - /gt_box/stim320/internal_counter
+      - /gt_box/stim320/kernel_timer
+      - /gt_box/stim320/continuous_counter
 nuc:
   bags:
     cpt7_local:
