--- a/box_utils/box_recording/CMakeLists.txt
+++ b/box_utils/box_recording/CMakeLists.txt
@@ -51,8 +51,7 @@ catkin_package(
 # Package installation
 #==
 
-install(DIRECTORY bin data scripts
+install(DIRECTORY bin src
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
-
 # EOF
